feat: better management of terminal